mail/rmailmm.el (rmail-show-mime): Catch an error caused by text	decoding, and show a warning message without signalling an error (Bug#11282).

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-03  Kenichi Handa  <handa@m17n.org>
+
+	* mail/rmailmm.el (rmail-show-mime): Catch an error caused by text
+	decoding, and show a warning message without signalling an error
+	(Bug#11282).
+
 2012-05-02  Juanma Barranquero  <lekktu@gmail.com>
 
 	* notifications.el (dbus-debug):
