--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-03  Glenn Morris  <rgm@gnu.org>
 
+	* calendar.texi: Convert inforefs to refs.
+
 	* dired.texi (Dired Enter): Improve page break.
 
 	* abbrevs.texi (Abbrev Concepts): Copyedits.
