Do not limit current-time-string to years 1000..9999.
* src/editfns.c (TM_YEAR_IN_ASCTIME_RANGE): Remove.
(Fcurrent_time_string): Support any year that is supported by the
underlying localtime representation.  Don't use asctime, as it
has undefined behavior for years outside the range -999..9999.
* doc/lispref/os.texi (Time of Day): Do not limit current-time-string
to years 1000..9999.
* etc/NEWS: Do not limit current-time-string to years 1000..9999.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-03  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* os.texi (Time of Day): Do not limit current-time-string
+	to years 1000..9999.
+
 2012-05-02  Chong Yidong  <cyd@gnu.org>
 
 	* display.texi (Font Lookup):
