Small lispintro edits
* emacs-lisp-intro.texi (Making Errors): Don't mention Emacs 20.
(Void Function, Wrong Type of Argument, Recursion with list)
(Simple Extension): Assume a non-ancient Emacs.
(Void Variable, Switching Buffers): Improve page breaks.

--- a/doc/lispintro/ChangeLog
+++ b/doc/lispintro/ChangeLog
@@ -1,3 +1,10 @@
+2012-05-04  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp-intro.texi (Making Errors): Don't mention Emacs 20.
+	(Void Function, Wrong Type of Argument, Recursion with list)
+	(Simple Extension): Assume a non-ancient Emacs.
+	(Void Variable, Switching Buffers): Improve page breaks.
+
 2012-05-03  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp-intro.texi: Update GNU Press contact details.
