--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-04  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (INFO_EXT, INFO_OPTS): New output variables.
+
 2012-05-02  Glenn Morris  <rgm@gnu.org>
 
 	* configure.in (LD_SWITCH_SYSTEM): Don't try to defeat
