--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,12 @@
+2012-05-04  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (INFO_EXT, INFO_OPTS): New, set by configure.
+	(info, infoclean): Use $INFO_EXT.
+	($(infodir)/elisp$(INFO_EXT)): Use $INFO_EXT and $INFO_OPT.
+	* makefile.w32-in (INFO_EXT, INFO_OPTS): New.
+	(info, maintainer-clean): Use $INFO_EXT.
+	($(infodir)/elisp$(INFO_EXT)): Use $INFO_EXT and $INFO_OPT.
+
 2012-05-04  Chong Yidong  <cyd@gnu.org>
 
 	* os.texi (Timers): Use defopt for timer-max-repeats.
