--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-04  Glenn Morris  <rgm@gnu.org>
+
+	* elisp.texi (DATE): Forgot to change the month in 2012-04-21 change.
+
 2012-05-01  Glenn Morris  <rgm@gnu.org>
 
 	* elisp.texi (@copying):
