--- a/doc/lispref/intro.texi
+++ b/doc/lispref/intro.texi
@@ -74,7 +74,7 @@ real-life example for a function or group of functions, please make an
 effort to write it up and send it in.  Please reference any comments to
 the chapter name, section name, and function name, as appropriate, since
 page numbers and chapter and section numbers will change and we may have
-trouble finding the text you are talking about.  Also state the number
+trouble finding the text you are talking about.  Also state the version
 of the edition you are criticizing.
 @end iftex
 @ifnottex
@@ -121,10 +121,10 @@ worry about it; this manual is self-contained.
 
 @pindex cl
   A certain amount of Common Lisp emulation is available via the
-@file{cl} library.  @inforef{Top, Overview, cl}.
+@file{cl} library.  @xref{Top,, Overview, cl, Common Lisp Extensions}.
 
   Emacs Lisp is not at all influenced by Scheme; but the GNU project has
-an implementation of Scheme, called Guile.  We use Guile in all new GNU
+an implementation of Scheme, called Guile.  We use it in all new GNU
 software that calls for extensibility.
 
 @node Conventions
@@ -258,7 +258,7 @@ displayed in the echo area.
 
   Examples in this manual indicate printed text with @samp{@print{}},
 irrespective of where that text goes.  The value returned by
-evaluating the form (here @code{bar}) follows on a separate line with
+evaluating the form follows on a separate line with
 @samp{@result{}}.
 
 @example
@@ -510,8 +510,6 @@ each time you build Emacs in any given directory.  A value with four
 numeric components, such as @code{"22.0.91.1"}, indicates an
 unreleased test version.
 @end defvar
-
-  The following two variables have existed since Emacs version 19.23:
 
 @defvar emacs-major-version
 The major version number of Emacs, as an integer.  For Emacs version
