--- a/doc/lispref/objects.texi
+++ b/doc/lispref/objects.texi
@@ -1568,7 +1568,6 @@ runs in a process of this sort.  However, in Emacs Lisp, a process is a
 Lisp object that designates a subprocess created by the Emacs process.
 Programs such as shells, GDB, ftp, and compilers, running in
 subprocesses of Emacs, extend the capabilities of Emacs.
-
   An Emacs subprocess takes textual input from Emacs and returns textual
 output to Emacs for further manipulation.  Emacs can also send signals
 to the subprocess.
@@ -1632,7 +1631,7 @@ buffer temporarily in a different display style.  Overlays have no read
 syntax, and print in hash notation, giving the buffer name and range of
 positions.
 
-  @xref{Overlays}, for how to create and use overlays.
+  @xref{Overlays}, for information on how you can create and use overlays.
 
 @node Font Type
 @subsection Font Type
