--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-04  Glenn Morris  <rgm@gnu.org>
 
+	* commands.texi (Event Input Misc): Don't mention unread-command-char.
+	* numbers.texi (Predicates on Numbers): Don't mention Emacs 18.
+
 	* objects.texi (Process Type, Overlay Type): Tweak page-breaks.
 
 	* intro.texi (Caveats): Copyedit.
